# bucket-bot

./: CMakeLists.txt  N64_DTO.h  README.md
app/lib/: README.txt
app/src/BucketBot/: BucketBot.ino
controller/: N64Controller  N64Controller.c
examples/: combined  combined.c  motor  motor.c  receiver  receiver.c  utils  utils.c
examples/backup/: receiver
motor/: MotorController.c  MotorController.c.bak  MotorController.h  MotorController1  MotorController1.c
receiver/: N64_DTO.h  XbeeReceiver  XbeeReceiver.c  XbeeReceiver.h
utils/: BotUtils.c  BotUtils.h
